--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,17 @@
 
   border: none;
 }
+.pic-back{
+  background-image: url(../img/man-station.png);
+}
 
+/* start card2 */
+.card2{
+  background-image: url(../img/card2.png);
+  background-size: cover;
+  padding: 30px 100px;
+  margin-top: 50px;
+}
 .line {
 
   padding-right: 10px;
@@ -52,21 +62,22 @@
   filter: none;
   opacity: 10px;
 }
-.card:hover {
-  background-color: #aca1a1;
+.card :hover{
+  cursor: pointer ;
+  background-color: blue;
 }
-.card-body :hover {
-  background-color: rgb(168, 168, 168);
+/* .card-box:hover {
+  background-color: rgb(168, 168, 168) ;
 }
 
 .card2 .col-lg-3 {
-  padding-top: 30px;
+  padding-top: 30px ;
 }
 
 .card2 .col-lg-3:hover {
   background-color: #1172D3;
   transition-duration: .5s;
-}
+} */
 
 /* end card2 */
 /* start slider2 */
