--- a/css/login.css
+++ b/css/login.css
@@ -5,3 +5,10 @@
 .font-size{
 font-size: 13px !important; 
 }
+.pading-box{
+    padding: 13;
+}
+/* .box-portal{
+    width: 100%;
+    background: ;
+} */
